<resources>
    <string name="app_name">Katalog</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="nim">Nim</string>
    <string name="nama">Nama</string>
    <string name="password">Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>