<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/txtNim"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegister"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nim"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegister"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/txtNim"
        android:hint="@string/nama"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNim"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/imgLogo"
        android:src="@drawable/ic_bike"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvKet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="Prodi"
        tools:ignore="HardcodedText" />

    <Spinner
        android:id="@+id/spProdi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvKet"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/txtAlamat"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/spProdi"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Alamat"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAlamat"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/red"
        android:text="Login"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAlamat"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/btnLogin"
        android:text="Register"
        tools:ignore="HardcodedText" />


</RelativeLayout>